## 0.2.0 / 2018-10-17

* [ENHANCEMENT] Set less strict rate limit on Kubernetes client.
* [ENHANCEMENT] Update to Brigade v0.18.0.

## 0.1.0 / 2018-09-03

* [FEATURE] Add job collector with the initial metrics.
* [FEATURE] Add build collector with the initial metrics.
* [FEATURE] Add project collector with the initial metrics.
* [FEATURE] Add exporter main logic.